os: Fix HashIndex::recursive_remove() to remove everything but original path

Fixes: http://tracker.ceph.com/issues/16672

Signed-off-by: David Zafman <dzafman@redhat.com>